[package]
name = "metaheurustics-python"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "metaheurustics"
crate-type = ["cdylib"]

[dependencies]
metaheurustics = { version = "0.1.0", path = "../.." }
pyo3 = "0.19.0"
rand = { version = "0.8.5", features = ["small_rng"] }
